@@ -338,6 +338,9 @@ z80_bit setting_process_switcher_immutable={0};
 //Si process switcher siempre esta visible
 z80_bit setting_process_switcher_always_visible={0};
 
+//Si process switcher siempre se ubica abajo a la izquierda por acciones del menu Windows (minimize all, cascade, etc)
+z80_bit setting_process_switcher_force_left_bottom={1};
+
 //Logo de decimo aniversario.
 //En version X (10.10) estaba habilitado por defecto
 z80_bit xanniversary_logo={0};
