@@ -1673,6 +1673,7 @@ printf("\n"
         "--right-mouse-esc                        Right button mouse simulates ESC key and not secondary actions\n"
         "--process-switcher-immutable             Massive actions on menu Windows, like minimize all, cascade, etc, don't affect the Process switcher window\n"
         "--process-switcher-always-visible        Process switcher is always visible (on top of all windows)\n"
+        "--process-switcher-no-left-bottom        Do not force process switcher to be located at left-bottom part of the display\n"
 		"--allow-background-windows               Allow putting windows in background\n"
         "--allow-background-windows-closed-menu   Allow these background windows even when menu closed\n"
 		);
@@ -4990,6 +4991,10 @@ int parse_cmdline_options(int desde_commandline) {
 
             else if (!strcmp(argv[puntero_parametro],"--process-switcher-always-visible")) {
                 setting_process_switcher_always_visible.v=1;
+            }
+
+            else if (!strcmp(argv[puntero_parametro],"--process-switcher-no-left-bottom")) {
+                setting_process_switcher_force_left_bottom.v=0;
             }
 
 			else if (!strcmp(argv[puntero_parametro],"--allow-background-windows")) {
