@@ -27,6 +27,7 @@ Improved ZX Vision:
 - When selecting ZX Vision Style, it is applied on moving cursor
 - Improve cursor movement on menus when pressing PgDn/PgUp
 - Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
+- Process switcher is located at bottom-left part of the display by default
 
 * Fixes:
 
